--- a/index.html
+++ b/index.html
@@ -8,38 +8,60 @@
 </head>
 <body>
     <div class="mainContainer">
-        <div class="burger"></div>
-        <div class="screen"></div>
-        <div class="buttonsContainer">
-           <p>
-            <input type="button" value="C" class="btn">
-            <input type="button" value="" class="btn">
-            <input type="button" value="DEL" class="btn">
-            <input type="button" value="" class="btn">
-           </p> 
-           <p>
-            <input type="button" value="9" class="btn">
-            <input type="button" value="8" class="btn">
-            <input type="button" value="7" class="btn">
-            <input type="button" value="X" class="btn">
-           </p> 
-           <p>
-            <input type="button" value="6" class="btn">
-            <input type="button" value="5" class="btn">
-            <input type="button" value="4" class="btn">
-            <input type="button" value="-" class="btn">
-           </p> 
-           <p>
-            <input type="button" value="3" class="btn">
-            <input type="button" value="2" class="btn">
-            <input type="button" value="1" class="btn">
-            <input type="button" value="+" class="btn">
-           </p>
-           <p>
-            <input type="button" value="0" class="btn">
-            <input type="button" value="." class="btn">
-            <input type="button" value="=" class="btn">
-           </p>
+        <div id="clock">12:00:56 AM</div>
+        <div class="screen">
+            <input type="text" placeholder="0" readonly id="screen">
+        </div>
+        <div class="buttons">
+            <p>
+                <input type="button" value="sin" class="btn">
+                <input type="button" value="cos" class="btn">
+                <input type="button" value="tan" class="btn">
+                <input type="button" value="asin" class="btn">
+                <input type="button" value="acos" class="btn">
+               </p> 
+               <p>
+                <input type="button" value="atan" class="btn">
+                <input type="button" value="π" class="btn">
+                <input type="button" value="ln" class="btn">
+                <input type="button" value="log" class="btn">
+                <input type="button" value="%" class="btn">
+               </p> 
+               <p>
+                <input type="button" value="sqd" class="btn">
+                <input type="button" value="cube" class="btn">
+                <input type="button" value="√" class="btn">
+                <input type="button" value="(" class="btn">
+                <input type="button" value=")" class="btn">
+               </p> 
+               <p>
+                <input type="button" value="7" class="btn">
+                <input type="button" value="8" class="btn">
+                <input type="button" value="9" class="btn">
+                <input type="button" value="Del" class="btn">
+                <input type="button" value="C" class="btn">
+               </p>
+               <p>
+                <input type="button" value="1" class="btn">
+                <input type="button" value="2" class="btn">
+                <input type="button" value="3" class="btn">
+                <input type="button" value="+" class="btn">
+                <input type="button" value="-" class="btn">
+               </p>
+               <p>
+                <input type="button" value="4" class="btn">
+                <input type="button" value="5" class="btn">
+                <input type="button" value="6" class="btn">
+                <input type="button" value="*" class="btn">
+                <input type="button" value="/" class="btn">
+               </p>
+               <p>
+                <input type="button" value="0" class="btn">
+                <input type="button" value="±" class="btn">
+                <input type="button" value="." class="btn">
+                <input type="button" value="Exp" class="btn">
+                <input type="button" value="=" class="btn">
+               </p>
         </div>
     </div>
 </body>
