some little CSS changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
             <div class="date">16 july 2024</div>
         </div>
         <div class="screen">
-            <input type="text" placeholder="0" readonly id="screen1" class="srn1" >
-            <input type="text" placeholder="Ans" readonly id="screen2" class="srn2" >
+            <div class="srn1">0</div>
+            <div class="srn2">Ans</div>
+            <!-- <input type="text" placeholder="0" readonly id="screen1" class="srn1" >
+            <input type="text" placeholder="Ans" readonly id="screen2" class="srn2" > -->
         </div>
         <div class="buttons">
             <p>
