--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Sci Cal</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="startTime()">
     <div class="mainContainer">
-        <div id="clock" class="clock">
+        <div id="clock" class="clock" >
             <div class="time">12:00:56 AM</div>
             <div class="date">16 july 2024</div>
         </div>
@@ -70,5 +70,7 @@
                </p>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
